// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders a selected tab correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  border-style: solid;
  border-color: #0a68c1;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

<button
    aria-selected="true"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="0"
    type="button"
  >
    <div
      class="emotion-1"
    />
  </button>
</DocumentFragment>
`;

exports[`Tab renders disabled tab 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #e4e4e4;
  color: #c0c0c0;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    disabled=""
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders label and icon with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        <span
          class="emotion-6"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders label with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders large tab 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders small tab 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 80px;
  padding: 8px 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders with a leading icon and custom iconSize 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 48px;
  height: 48px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        <span
          class="emotion-6"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders with a trailing icon and custom spacing between elements 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-5 emotion-6"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab renders with different minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<button
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Tab should render custom aria-label tab 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-0:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

.emotion-0:focus {
  outline-offset: -1px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<button
    aria-label="my custom aria label"
    aria-selected="false"
    class="emotion-0"
    data-testid="tab"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Tab Label
        </span>
      </div>
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-5 emotion-6"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;
